--- a/ProjectFiles/Base.lproj/Main.storyboard
+++ b/ProjectFiles/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="7cJ-A0-5Pj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="7cJ-A0-5Pj">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -14,31 +15,36 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pYa-ms-Gmg">
-                                <rect key="frame" x="0.0" y="58" width="600" height="542"/>
                                 <connections>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="qNw-dT-Csi"/>
                                 </connections>
                             </scrollView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Lz-Jh-apA" customClass="USGScrollingTabBar" customModule="USGScrollingTabBar" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="20" width="600" height="30"/>
-                                <color key="backgroundColor" red="0.57647058823529407" green="0.49411764705882355" blue="0.71764705882352942" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.50187081098556519" green="0.40656852722167969" blue="0.65958082675933838" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="ca7-pf-hZd"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="東京メトロ 半蔵門線 Tokyo Metro Hanzomon Line" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7eL-SV-p9I">
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="pYa-ms-Gmg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6Mz-j5-tLU"/>
                             <constraint firstItem="0Lz-Jh-apA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Arh-yq-Xo2"/>
                             <constraint firstItem="pYa-ms-Gmg" firstAttribute="top" secondItem="0Lz-Jh-apA" secondAttribute="bottom" constant="8" id="Dxv-5Z-0oC"/>
-                            <constraint firstItem="0Lz-Jh-apA" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="HMv-v5-MJW"/>
+                            <constraint firstItem="0Lz-Jh-apA" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="30" id="HMv-v5-MJW"/>
+                            <constraint firstItem="7eL-SV-p9I" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="6" id="PfI-KF-JOo"/>
                             <constraint firstAttribute="trailing" secondItem="0Lz-Jh-apA" secondAttribute="trailing" id="cDE-Bd-y2d"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="pYa-ms-Gmg" secondAttribute="bottom" id="hrB-Ge-Ray"/>
+                            <constraint firstItem="7eL-SV-p9I" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ncw-Xq-77L"/>
                             <constraint firstAttribute="trailing" secondItem="pYa-ms-Gmg" secondAttribute="trailing" id="tct-WT-rKX"/>
                         </constraints>
                     </view>
@@ -55,7 +61,7 @@
                 <view clipsSubviews="YES" contentMode="scaleToFill" id="Kxq-9P-WIZ">
                     <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
             </objects>
             <point key="canvasLocation" x="534" y="545"/>
