--- a/ProjectFiles/USGScrollingTabBar/USGScrollingTabCell.xib
+++ b/ProjectFiles/USGScrollingTabBar/USGScrollingTabCell.xib
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,11 +19,13 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fMB-x0-dBp">
+                        <rect key="frame" x="0.0" y="0.0" width="150" height="50"/>
                         <connections>
                             <action selector="buttonAction:" destination="gTV-IL-0wX" eventType="touchUpInside" id="0hj-VR-Uct"/>
                         </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ukb-Hs-kyN" userLabel="ラベル">
+                        <rect key="frame" x="12.5" y="16" width="125.5" height="18"/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -34,10 +39,10 @@
                 <constraint firstItem="fMB-x0-dBp" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="QxI-0H-HGX"/>
                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="ukb-Hs-kyN" secondAttribute="bottom" id="Rlu-lt-w4r"/>
                 <constraint firstAttribute="centerY" secondItem="ukb-Hs-kyN" secondAttribute="centerY" id="cUv-GL-nyB"/>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ukb-Hs-kyN" secondAttribute="trailing" id="dhY-Qh-0zk"/>
+                <constraint firstAttribute="trailing" secondItem="ukb-Hs-kyN" secondAttribute="trailing" constant="12" id="dhY-Qh-0zk"/>
                 <constraint firstAttribute="centerX" secondItem="ukb-Hs-kyN" secondAttribute="centerX" id="gyj-dt-UJ9"/>
                 <constraint firstAttribute="bottom" secondItem="fMB-x0-dBp" secondAttribute="bottom" id="jPB-FX-MNs"/>
-                <constraint firstItem="ukb-Hs-kyN" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="gTV-IL-0wX" secondAttribute="leading" id="rwX-mC-J3x"/>
+                <constraint firstItem="ukb-Hs-kyN" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="12" id="rwX-mC-J3x"/>
                 <constraint firstAttribute="trailing" secondItem="fMB-x0-dBp" secondAttribute="trailing" id="zzT-30-Jrt"/>
             </constraints>
             <size key="customSize" width="150" height="50"/>
